# gb

./: CMakeLists.txt
src/: CMakeLists.txt
src/libgb/: CMakeLists.txt  bus.c  cpu.c  gb.c
src/libgb/include/: bus.h  cpu.h  gb.h
src/libgb/utility/: memory.c  memory.h
src/test/: CMakeLists.txt  emulator.cpp  emulator.h  gbtest.cpp  gbtest.h  main.cpp  main_window.cpp  main_window.h
src/test/debug/: message_logger.cpp  message_logger.h
